# cem_batch_projection_vis_planner

./: README.md
Nageli_implementation/: ours_computation_time.npy  test
cem_vis_planner/: CMakeLists.txt  package.xml
cem_vis_planner/config/: bebop_laser.rviz
cem_vis_planner/launch/: 6_wall_world.launch  laser_assembler.launch
cem_vis_planner/scripts/mpc/: bernstein_coeff_order10_arbitinterval.py  main_base_line_cem.py  main_projection.py  mpc_module_base_line_cem.py  mpc_module_projection.py
cem_vis_planner/scripts/utils/: get_occupied_points.py  laser_to_pointcloud.py  line_of_sight_visualizer.py
cem_vis_planner/target_trajectory_bag_files/: 6_wall_target_vel_05.bag  6_wall_target_vel_1.bag
cem_vis_planner/urdf/: bebop.urdf  big_wall_1.urdf  big_wall_2.urdf  big_wall_3.urdf  big_wall_4.urdf  big_wall_5.urdf  big_wall_6.urdf  target.urdf
