<?xml version="1.0"?>
<package format="2">
  <name>cem_vis_planner</name>
  <version>0.0.0</version>
  <description>The cem_vis_planner package</description>

  <maintainer email="hm.houman@gmail.com">Houman Masnavi</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>bebop_gazebo</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>bebop_gazebo</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>bebop_gazebo</exec_depend>
  <exec_depend>rospy</exec_depend>


  <export>

  </export>
</package>
